--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- 主流浏览器缓存 -->
+    <!-- <meta http-equiv="Cache-Control" content="max-age=7200" /> -->
+    <!-- IE浏览器缓存 -->
+    <!-- <meta http-equiv="Expires" content="Mon, 06 Jan 2020 23:59:59 GMT" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
